--- a/src/app/user/project/views/list.html
+++ b/src/app/user/project/views/list.html
@@ -40,7 +40,7 @@
 	                            </tr>
 	                        </thead>
 	                        <tbody>
-	                            <tr ng-repeat="object in listprojects | filter:query | orderBy:sortField:reverse track by $index">
+	                            <tr ng-repeat="object in vm.projects | filter:query | orderBy:sortField:reverse track by $index">
 	                                <td>{{ $index + 1 }}</td>
 	                                <td>{{ object.name }}</td>
 	                                <td>{{ object.date_start | date: 'dd-MM-yyyy' }}</td>
@@ -48,7 +48,7 @@
 	                                <td>{{ object.leader.name }}</td>
 	                                <td>{{ object.status == '1' ? 'Queued' : object.status == '2' ? 'On Progress' : object.status == '3' ? 'Waiting for Scorring' : object.status == '4' ? 'Complete' : object.status == '5' ? 'Closed' : 'Unknown' }}</td>
 	                                <td>
-	                                	<a ng-click="detail(object.id)" class="btn btn-info btn-xs" popover="Detail" popover-trigger="mouseenter">
+	                                	<a ng-click="vm.detail(object.id)" class="btn btn-info btn-xs" popover="Detail" popover-trigger="mouseenter">
 	                                		<i class="fa fa-search"></i>
                                 		</a>
 	                                </td>
@@ -61,6 +61,6 @@
        	</div>
    	</div>
 
-<pre ng-if="debug">
-	{{ listprojects | json }}
+<pre ng-if="user.debug">
+	{{ vm.input | json }}
 </pre>
